fixed overflow issue

--- a/css files/construction.css
+++ b/css files/construction.css
@@ -176,6 +176,7 @@
         }
 
         /* Header Styles */
+          /* Header Styles */
         header {
             padding: 20px 5%;
             display: flex;
@@ -186,7 +187,6 @@
             top: 0;
             z-index: 100;
             background: white;
-            
         }
 
         .logo {
@@ -198,6 +198,7 @@
             color: var(--text);
             font-family: 'Playfair Display', serif;
             letter-spacing: 1px;
+                 border:1px solid red;
         }
 
         .logo i {
@@ -422,7 +423,6 @@
         }
            
         }
-
 .container {
             width: 90%;
             max-width: 1200px;
